<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepolitan.sholatyuk.ui.schedule.PrayerScheduleActivity">


    <LinearLayout
        android:id="@+id/linear_layout_container_content_activity_prayer_schedule"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_mountain" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:background="#000000" />

            <TextView
                android:id="@+id/text_view_location_city_activity_prayer_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="8dp"
                android:alpha="0.7"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/location_city"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_above="@+id/text_view_location_city_activity_prayer_schedule"
                android:layout_centerHorizontal="true"
                android:alpha="0.8"
                android:src="@drawable/ic_location_on_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_location_city_activity_prayer_schedule"
                android:layout_centerHorizontal="true"
                android:alpha="0.6"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/indonesia"
                android:textColor="#f5f5f5"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_view_date_activity_prayer_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e0e0e0"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/mon_august_29_2015"
            android:textAllCaps="true"
            android:textColor="#757575" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_data_prayer_schedule_activity_prayer_schedule"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_activity_prayer_schedule"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

</RelativeLayout>
